# Neural_Networks_Course_Project1

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
NeuralNetworkGUI/: MainWindow.cpp  MainWindow.h  NeuralNetworkGUI.pro  mainwindow.ui
src/: Activation1.cpp  Dataloader.cpp  Loss.cpp  LossFunction.h  Random.h  Test.cpp  main.cpp
src/Activation Functions/: Activation1.h  Activation2.cpp  ActivationFunction.cpp  ActivationFunction.h
src/ActivationFunctions/: ActivationFunction.cpp  ActivationFunction.h
src/Exceptions/: Exception.h
src/Layers/: AnyLayer.h  Anylayer_2grade.cpp  DenseLayer.h  DropoutLayer.h  Layer.cpp  Layer.h  LinearLayer.cpp  LinearLayer.h  math.h
src/Loader/: MNISTLoader.cpp  MNISTLoader.h
src/Loss Functions/: LossFunction.cpp  LossFunction.h
src/LossFunctions/: LossFunction.cpp  LossFunction.h
src/Model/: Model.cpp  Model.h
src/Optimizer/: Optimizer.cpp  Optimizer.h
src/Tests/: Tests.cpp  Tests.h
src/Utilities/: FileReader.cpp  FileReader.h  FileWriter.cpp  FileWriter.h  LinAlg.h  Random.cpp  Random.h  Utils.h
